ns1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oap-ns1
  labels:
    hr: "hi-hr"
