ns2.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: oap-ns2
  labels:
    finance: "hi-finance"
