full.yaml
apiVersion: v1

kind: Namespace

metadata:

  name: l-ns
 
 
---

apiVersion: apps/v1

kind: Deployment

metadata:

  name: mongodb

  namespace: l-ns

spec:

  replicas: 1

  strategy:

    type: Recreate

  selector:

    matchLabels:

      app: mongodb

  template:

    metadata:

      labels:

        app: mongodb

    spec:

      containers:

        - name: mongodb

          image: mongo:7-jammy

          ports:

            - containerPort: 27017
 
          resources:

            requests:

              memory: "256Mi"

              cpu: "100m"

            limits:

              memory: "512Mi"

              cpu: "200m"
 
          volumeMounts:

            - name: mongodb-storage

              mountPath: /data/db
 

 
      volumes:

        - name: mongodb-storage

          persistentVolumeClaim:

            claimName: mongodb-pvc
 
 
---

apiVersion: v1

kind: Service

metadata:

  name: mongodb-service

  namespace: l-ns

spec:

  type: ClusterIP

  selector:

    app: mongodb

  ports:

    - port: 27017

      targetPort: 27017
 
---

apiVersion: apps/v1

kind: Deployment

metadata:

  name: fitness-tracker-app

  namespace: l-ns

spec:

  replicas: 2

  strategy:

    type: RollingUpdate

    rollingUpdate:

      maxUnavailable: 1

      maxSurge: 1
 
  selector:

    matchLabels:

      app: fitness-tracker-app
 
  template:

    metadata:

      labels:

        app: fitness-tracker-app
 
    spec:

      tolerations:

        - key: "app"

          operator: "Equal"

          value: "myapp"

          effect: "NoSchedule"
 
      containers:

        - name: fitness-tracker-app

          image: fitnesstr.azurecr.io/fitness-lijaz:latest

          ports:

            - containerPort: 5000
 
---

apiVersion: v1

kind: Service

metadata:

  name: fitness-tracker-service

  namespace: l-ns

spec:

  type: ClusterIP

  selector:

    app: fitness-tracker-app

  ports:

    - port: 80

      targetPort: 5000
 
mongo-root-username
