kyverno-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-proper-image-tag
spec:
  validationFailureAction: Enforce
  rules:
  - name: check-resources
    match:
      resources:
        kinds:
        - Deployment
    validate:
      message: "All images must have a proper tag, dont end with latest, must give tag"
      pattern:
        spec:
          template:
            spec:
              containers:
              - image: "!*:latest"
              - image: "*:*"
